Réorganisation du code.
Implémentation d'une caractéristique supplémentaire : "distance du tir" par rapport au filet.

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -4,6 +4,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import SeasonData as sdata"
@@ -29,12 +30,31 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "def additional_features(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Add additional features to the dataframe\"\"\"\n",
+    "\n",
+    "    # Add shot distance\n",
+    "\n",
+    "    # Define the Euclidian distance function\n",
+    "    dist_euclidian = lambda x1, x2: np.round(np.linalg.norm(np.array(x1 - x2)), decimals=1)\n",
+    "\n",
+    "    # Add shot distance based on the ice coordinates\n",
+    "    df['shotDistance'] = df.apply(\n",
+    "        lambda x: dist_euclidian(x['iceCoord'], np.array([-89, 0])) if x['iceCoord'][0] <= 0\n",
+    "        else dist_euclidian(x['iceCoord'], np.array([89, 0])), axis=1)\n",
+    "    return df"
+   ],
+   "id": "da17e105fd5b384",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "def minutes_to_seconds(df: pd.DataFrame, column: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
-    "    Processing data and transformation to dataframe\n",
-    "    :param df: \n",
-    "    :param column: \n",
-    "    :return: \n",
+    "    Convert dataframe column from 'minutes:seconds' to 'seconds' and add the number of period\n",
     "    \"\"\"\n",
     "    # Split columns into 'minutes' and 'seconds' and 'number of period' as integer\n",
     "    df['minutes'] = df[column].str.split(':').str[0].astype(int)\n",
@@ -57,15 +77,8 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "def convert_event_to_dataframe(game_nhl: dict) -> pd.DataFrame:\n",
-    "    \"\"\"\n",
-    "    Convert NHL game event data into a clean dataframe  \n",
-    "    :param game_nhl: Dictionary containing the data of the NHL game\n",
-    "    :return: A Pandas DataFrame containing filtered data\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Extract the play-by-play data from the game dictionary\n",
-    "    df_pbp = pd.DataFrame(game_nhl['plays'])\n",
+    "def extract_players(game_nhl: dict) -> pd.DataFrame:\n",
+    "    \"\"\"Extract the play-by-play data from the game dictionary\"\"\"\n",
     "\n",
     "    # Extract player data\n",
     "    df_players = pd.DataFrame(game_nhl['rosterSpots'])[['playerId', 'firstName', 'lastName']]\n",
@@ -73,47 +86,55 @@
     "    # Keep the default name for each player (first and last name)\n",
     "    df_players['firstName'] = df_players['firstName'].apply(lambda x: x['default'])\n",
     "    df_players['lastName'] = df_players['lastName'].apply(lambda x: x['default'])\n",
-    "\n",
-    "    # Extract the 'home' and 'away' teams\n",
+    "    return df_players"
+   ],
+   "id": "3511273f4153e81b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def extract_teams(game_nhl: dict) -> pd.DataFrame:\n",
+    "    \"\"\"Extract 'home' and 'away' teams\"\"\"\n",
     "    home_team = {'teamId': game_nhl['homeTeam']['id'], 'teamName': game_nhl['homeTeam']['name']['default'],\n",
     "                 'teamSide': 'home'}\n",
     "    away_team = {'teamId': game_nhl['awayTeam']['id'], 'teamName': game_nhl['awayTeam']['name']['default'],\n",
     "                 'teamSide': 'away'}\n",
-    "    df_team = pd.DataFrame([home_team, away_team])\n",
-    "\n",
-    "    # Parse the game's start time to UTC\n",
-    "    start_time = pd.to_datetime(game_nhl['startTimeUTC'])\n",
-    "\n",
-    "    # Create a new dataframe for the event data\n",
-    "    new_df = pd.DataFrame(df_pbp[['periodDescriptor', 'timeInPeriod', 'situationCode', 'typeDescKey', 'details']])\n",
-    "\n",
-    "    # Insert the game ID as the first column\n",
-    "    new_df.insert(0, 'idGame', game_nhl['id'])\n",
-    "\n",
-    "    # Filter to keep only events of type 'shot-on-goal' or 'goal'\n",
-    "    new_df = new_df[(new_df['typeDescKey'] == 'shot-on-goal') | (new_df['typeDescKey'] == 'goal')].reset_index(\n",
-    "        drop=True)\n",
-    "\n",
-    "    # Decompose the period descriptor fields\n",
-    "    df_period = pd.DataFrame(new_df['periodDescriptor'].tolist())\n",
-    "    new_df.drop('periodDescriptor', axis=1, inplace=True)\n",
+    "    return pd.DataFrame([home_team, away_team])"
+   ],
+   "id": "5ea05fc84089b73b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def process_period_data(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Decompose periodDescriptor and return processed dataframe.\"\"\"\n",
+    "    \n",
+    "    # Split 'periodDescriptor' into 'periodType', 'number', and 'maxRegulationPeriods'\n",
+    "    df_period = pd.DataFrame(df['periodDescriptor'].tolist())\n",
     "\n",
     "    # Convert 'number' and 'maxRegulationPeriods' columns as strings\n",
     "    df_period[['number', 'maxRegulationPeriods']] = df_period[['number', 'maxRegulationPeriods']].astype(str)\n",
+    "    return df_period"
+   ],
+   "id": "6b97b9e57bceda45",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def process_event_details(df: pd.DataFrame, df_players: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Process event details and merge with player information.\"\"\"\n",
+    "    df_details = pd.DataFrame(df['details'].tolist())\n",
     "\n",
-    "    # Add 'periodType' and 'currentPeriod' columns to the new dataframe\n",
-    "    new_df.insert(1, 'periodType', df_period['periodType'])\n",
-    "    new_df.insert(2, 'currentPeriod', df_period['number'] + '/' + df_period['maxRegulationPeriods'])\n",
-    "\n",
-    "    # Convert time in the period to seconds and add it to the game start time\n",
-    "    new_df = minutes_to_seconds(new_df, 'timeInPeriod')\n",
-    "    new_df['timeInPeriod'] = start_time + pd.to_timedelta(new_df['timeInPeriod'], unit='s')\n",
-    "\n",
-    "    # Decompose the details fields\n",
-    "    df_details = pd.DataFrame(new_df['details'].tolist())\n",
-    "    new_df.drop('details', axis=1, inplace=True)\n",
-    "\n",
-    "    # Combine the x and y coordinates into a tuple\n",
+    "    # Combine x and y coordinates into a tuple\n",
     "    df_details['iceCoord'] = df_details[['xCoord', 'yCoord']].apply(tuple, axis=1)\n",
     "\n",
     "    # Merge 'shooting' and 'scoring' player, to keep only one column\n",
@@ -133,41 +154,115 @@
     "\n",
     "    # Add the goalies names by merging IDs \n",
     "    df_details = pd.merge(df_players, df_details, left_on='playerId', right_on='goalieInNetId', how='right').drop(\n",
-    "        columns=['playerId'])  # 'right' to keep the Nan values\n",
+    "        columns=['playerId'])\n",
     "\n",
     "    # Keep only full name\n",
     "    df_details['goaliePlayer'] = df_details['firstName'] + ' ' + df_details['lastName']\n",
     "    df_details.drop(['firstName', 'lastName'], axis=1, inplace=True)\n",
     "\n",
+    "    return df_details"
+   ],
+   "id": "b8c7efdad07d567c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def calculate_empty_goal_net(df: pd.DataFrame) -> pd.Series:\n",
+    "    \"\"\"Determine if the goal net is empty\"\"\"\n",
+    "    return df.apply(lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map(\n",
+    "        {'0': True, '1': False})"
+   ],
+   "id": "d37d1bb74d29c347",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def determine_goal_advantage(df: pd.DataFrame) -> pd.Series:\n",
+    "    \"\"\"Determine if the event team is in advantage, disadvantage, or neutral situation\"\"\"\n",
+    "    return df.apply(lambda x: \"Advantage\" if (int(x['situationCode'][1]) > int(x['situationCode'][2]) and x[\n",
+    "        'teamSide'] == 'away') or (int(x['situationCode'][2]) > int(x['situationCode'][1]) and x[\n",
+    "        'teamSide'] == 'home')\n",
+    "    else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away') or\n",
+    "                           (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
+    "    else 'Neutral', axis=1)"
+   ],
+   "id": "acc2e5e0b0a79885",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def convert_event_to_dataframe(game_nhl: dict) -> pd.DataFrame:\n",
+    "    \"\"\"\n",
+    "    Convert NHL game event data into a clean dataframe  \n",
+    "    :param game_nhl: Dictionary containing the data of the NHL game\n",
+    "    :return: A Pandas DataFrame containing filtered data\n",
+    "    \"\"\"\n",
+    "    # Extract play-by-play data\n",
+    "    df_pbp = pd.DataFrame(game_nhl['plays'])\n",
+    "\n",
+    "    # Extract player and team data\n",
+    "    df_players = extract_players(game_nhl)\n",
+    "    df_teams = extract_teams(game_nhl)\n",
+    "\n",
+    "    # Create a new dataframe for the event data\n",
+    "    clean_df = pd.DataFrame(df_pbp[['periodDescriptor', 'timeInPeriod', 'situationCode', 'typeDescKey', 'details']])\n",
+    "\n",
+    "    # Insert the game ID as the first column\n",
+    "    clean_df.insert(0, 'idGame', game_nhl['id'])\n",
+    "\n",
+    "    # Filter to keep only events of type 'shot-on-goal' or 'goal'\n",
+    "    clean_df = clean_df[(clean_df['typeDescKey'] == 'shot-on-goal') | (clean_df['typeDescKey'] == 'goal')].reset_index(\n",
+    "        drop=True)\n",
+    "\n",
+    "    # Create a dataframe to decompose the period descriptor fields\n",
+    "    df_period = process_period_data(clean_df)\n",
+    "    clean_df.drop('periodDescriptor', axis=1, inplace=True)\n",
+    "\n",
+    "    # Add 'periodType' and 'currentPeriod' columns to the new dataframe\n",
+    "    clean_df.insert(1, 'periodType', df_period['periodType'])\n",
+    "    clean_df.insert(2, 'currentPeriod', df_period['number'] + '/' + df_period['maxRegulationPeriods'])\n",
+    "\n",
+    "    # Parse the game's start time to UTC\n",
+    "    start_time = pd.to_datetime(game_nhl['startTimeUTC'])\n",
+    "\n",
+    "    # Convert time in the period to seconds and add it to the game start time\n",
+    "    clean_df = minutes_to_seconds(clean_df, 'timeInPeriod')\n",
+    "    clean_df['timeInPeriod'] = start_time + pd.to_timedelta(clean_df['timeInPeriod'], unit='s')\n",
+    "\n",
+    "    # Process event details and merge player information\n",
+    "    df_details = process_event_details(clean_df, df_players)\n",
+    "    clean_df.drop('details', axis=1, inplace=True)\n",
+    "\n",
     "    # Add team data by merging IDs\n",
-    "    df_details = pd.merge(df_team, df_details, left_on='teamId', right_on='eventOwnerTeamId', how='right')\n",
+    "    df_details = pd.merge(df_teams, df_details, left_on='teamId', right_on='eventOwnerTeamId', how='right')\n",
     "\n",
     "    # Add the extracted data to the new dataframe\n",
-    "    new_df['iceCoord'] = df_details['iceCoord']\n",
-    "    new_df['shootingPlayer'] = df_details['shootingPlayer']\n",
-    "    new_df['goaliePlayer'] = df_details['goaliePlayer']\n",
-    "    new_df['shotType'] = df_details['shotType']\n",
-    "    new_df.insert(5, 'eventOwnerTeam', df_details['teamName'])\n",
-    "    new_df['teamSide'] = df_details['teamSide']\n",
+    "    clean_df['iceCoord'] = df_details['iceCoord']\n",
+    "    clean_df['shootingPlayer'] = df_details['shootingPlayer']\n",
+    "    clean_df['goaliePlayer'] = df_details['goaliePlayer']\n",
+    "    clean_df['shotType'] = df_details['shotType']\n",
+    "    clean_df.insert(5, 'eventOwnerTeam', df_details['teamName'])\n",
+    "    clean_df['teamSide'] = df_details['teamSide']\n",
     "\n",
-    "    # Check if the goal is empty based on the situation code and team side\n",
-    "    new_df['emptyGoalNet'] = new_df.apply(\n",
-    "        lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map(\n",
-    "        {'0': True, '1': False})\n",
+    "    # Calculate emptyGoalNet and goal advantage\n",
+    "    clean_df['emptyGoalNet'] = calculate_empty_goal_net(clean_df)\n",
+    "    clean_df['isGoalAdvantage'] = determine_goal_advantage(clean_df)\n",
     "\n",
-    "    #  Determine if the event team is in advantage, disadvantage, or neutral situation\n",
-    "    new_df['isGoalAdvantage'] = new_df.apply(\n",
-    "        lambda x: \"Advantage\" if (int(x['situationCode'][1]) > int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
-    "                                 or (int(x['situationCode'][2]) > int(x['situationCode'][1]) and x[\n",
-    "            'teamSide'] == 'home')\n",
-    "        else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away')\n",
-    "                               or (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
-    "        else 'Neutral'\n",
-    "        , axis=1)\n",
+    "    # Add shot distance\n",
+    "    clean_df = additional_features(clean_df)\n",
     "\n",
-    "    return new_df"
+    "    return clean_df"
    ],
-   "id": "c565e702e4d717db",
+   "id": "e8fa9653b8976de2",
    "outputs": [],
    "execution_count": null
   },
@@ -194,7 +289,7 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# Test on all regular season\n",
+    "#Test on all regular season\n",
     "\n",
     "data_rs_clean = {}  # Store all clean data\n",
     "\n",
