Added get_data_from function
Parameters:
    - first (int): The first year (inclusive) from which to retrieve data.
    - last (int): The last year (inclusive) from which to retrieve data.

    Returns:
    - dict: A dictionary where the keys are years, and the values are lists of DataFrames. Each DataFrame corresponds
    to a single game in the specified year and contains information about the shots taken during that game.

--- a/NHL_DataExploration.ipynb
+++ b/NHL_DataExploration.ipynb
@@ -1,34 +1,32 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "8d67a944574fc258",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "import SeasonData as sdata"
-   ],
-   "id": "8d67a944574fc258",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2b2afe2c",
    "metadata": {},
-   "cell_type": "code",
    "source": [
-    "# Generating play-by-play data for year 2022\n",
-    "data = sdata.NHLData()  # Object creation\n",
-    "data.fetch_regular_season(year=2022)  # Fetching data\n",
-    "data_rs = data.regular_season  # Get data in variable"
-   ],
-   "id": "d4c7a13b8f7ab877",
-   "outputs": [],
-   "execution_count": null
+    "## 3. Nettoyage des données"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "da17e105fd5b384",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def additional_features(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Add additional features to the dataframe\"\"\"\n",
@@ -43,14 +41,14 @@
     "        lambda x: dist_euclidian(x['iceCoord'], np.array([-89, 0])) if x['iceCoord'][0] <= 0\n",
     "        else dist_euclidian(x['iceCoord'], np.array([89, 0])), axis=1)\n",
     "    return df"
-   ],
-   "id": "da17e105fd5b384",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "ac85106b1a1dc21e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def minutes_to_seconds(df: pd.DataFrame, column: str) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -68,14 +66,14 @@
     "    df.drop(['minutes', 'seconds', 'numberPeriod'], axis=1, inplace=True)\n",
     "\n",
     "    return df"
-   ],
-   "id": "ac85106b1a1dc21e",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "3511273f4153e81b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def extract_players(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"Extract the play-by-play data from the game dictionary\"\"\"\n",
@@ -87,14 +85,14 @@
     "    df_players['firstName'] = df_players['firstName'].apply(lambda x: x['default'])\n",
     "    df_players['lastName'] = df_players['lastName'].apply(lambda x: x['default'])\n",
     "    return df_players"
-   ],
-   "id": "3511273f4153e81b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "5ea05fc84089b73b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def extract_teams(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"Extract 'home' and 'away' teams\"\"\"\n",
@@ -103,14 +101,14 @@
     "    away_team = {'teamId': game_nhl['awayTeam']['id'], 'teamName': game_nhl['awayTeam']['name']['default'],\n",
     "                 'teamSide': 'away'}\n",
     "    return pd.DataFrame([home_team, away_team])"
-   ],
-   "id": "5ea05fc84089b73b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b97b9e57bceda45",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def process_period_data(df: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Decompose periodDescriptor and return processed dataframe.\"\"\"\n",
@@ -121,25 +119,28 @@
     "    # Convert 'number' and 'maxRegulationPeriods' columns as strings\n",
     "    df_period[['number', 'maxRegulationPeriods']] = df_period[['number', 'maxRegulationPeriods']].astype(str)\n",
     "    return df_period"
-   ],
-   "id": "6b97b9e57bceda45",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "b8c7efdad07d567c",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def process_event_details(df: pd.DataFrame, df_players: pd.DataFrame) -> pd.DataFrame:\n",
     "    \"\"\"Process event details and merge with player information.\"\"\"\n",
     "    df_details = pd.DataFrame(df['details'].tolist())\n",
-    "\n",
+    "    \n",
     "    # Combine x and y coordinates into a tuple\n",
     "    df_details['iceCoord'] = df_details[['xCoord', 'yCoord']].apply(tuple, axis=1)\n",
     "\n",
     "    # Merge 'shooting' and 'scoring' player, to keep only one column\n",
     "    df_details['shootingPlayerId'] = df_details['shootingPlayerId'].fillna(0) + df_details['scoringPlayerId'].fillna(0)\n",
-    "\n",
+    "    \n",
+    "    # Fill missing 'goalieInNetId' values with 0\n",
+    "    df_details['goalieInNetId'] = df_details['goalieInNetId'].fillna(0)\n",
+    "    \n",
     "    # Convert 'shootingPlayerId' and 'goalieInNetId' as integer\n",
     "    df_details['shootingPlayerId'] = df_details['shootingPlayerId'].astype(int)\n",
     "    df_details['goalieInNetId'] = df_details['goalieInNetId'].astype('Int64')  # Int64: handling NaN values\n",
@@ -161,27 +162,27 @@
     "    df_details.drop(['firstName', 'lastName'], axis=1, inplace=True)\n",
     "\n",
     "    return df_details"
-   ],
-   "id": "b8c7efdad07d567c",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "d37d1bb74d29c347",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def calculate_empty_goal_net(df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Determine if the goal net is empty\"\"\"\n",
     "    return df.apply(lambda x: x['situationCode'][3] if x['teamSide'] == 'away' else x['situationCode'][0], axis=1).map(\n",
     "        {'0': True, '1': False})"
-   ],
-   "id": "d37d1bb74d29c347",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "acc2e5e0b0a79885",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def determine_goal_advantage(df: pd.DataFrame) -> pd.Series:\n",
     "    \"\"\"Determine if the event team is in advantage, disadvantage, or neutral situation\"\"\"\n",
@@ -191,14 +192,14 @@
     "    else \"Disadvantage\" if (int(x['situationCode'][1]) < int(x['situationCode'][2]) and x['teamSide'] == 'away') or\n",
     "                           (int(x['situationCode'][2]) < int(x['situationCode'][1]) and x['teamSide'] == 'home')\n",
     "    else 'Neutral', axis=1)"
-   ],
-   "id": "acc2e5e0b0a79885",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "e8fa9653b8976de2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def convert_event_to_dataframe(game_nhl: dict) -> pd.DataFrame:\n",
     "    \"\"\"\n",
@@ -261,73 +262,274 @@
     "    clean_df = additional_features(clean_df)\n",
     "\n",
     "    return clean_df"
-   ],
-   "id": "e8fa9653b8976de2",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# Test one game (avoid to test on all data)\n",
-    "\n",
-    "new_data = sdata.NHLData()\n",
-    "new_data.fetch_regular_season(year=2022)\n",
-    "data_2022 = data.regular_season[2022]\n",
-    "game_one_2022 = data_2022[0]\n",
-    "df_game_one_2022 = convert_event_to_dataframe(game_one_2022)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_columns', None)\n",
-    "display(df_game_one_2022)"
-   ],
-   "id": "97cb6a12cf51982a",
+   "execution_count": 11,
+   "id": "77e51ab2",
+   "metadata": {},
    "outputs": [],
-   "execution_count": null
+   "source": [
+    "def get_data_from(first_year: int, last_year: int) -> dict:\n",
+    "    \n",
+    "    '''\n",
+    "    Retrieves game data for each season within the specified range of years, processes the events of each game\n",
+    "    (focusing on shots), and organizes the information into a dictionary. The dictionary's keys are the years,\n",
+    "    and the corresponding values are lists of DataFrames, where each DataFrame represents all the shots taken \n",
+    "    in a particular game during that year.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - first (int): The first year (inclusive) from which to retrieve data.\n",
+    "    - last (int): The last year (inclusive) from which to retrieve data.\n",
+    "\n",
+    "    Returns:\n",
+    "    - dict: A dictionary where the keys are years, and the values are lists of DataFrames. Each DataFrame corresponds\n",
+    "    to a single game in the specified year and contains information about the shots taken during that game.\n",
+    "    \n",
+    "    '''\n",
+    "    \n",
+    "    all_games_dictionary = {} # Initialize the return dictionary\n",
+    "    data = sdata.NHLData() # Initialize the data object\n",
+    "    \n",
+    "    # Loop over all years\n",
+    "    for year in range(first_year, last_year+1):\n",
+    "        \n",
+    "        # Generate the data from API or local if available\n",
+    "        data.fetch_regular_season(year=year)\n",
+    "        data.fetch_playoffs(year=year)\n",
+    "        yearly_data = data.regular_season[year] + data.playoffs[year] # List with all the games in a year\n",
+    "        \n",
+    "        # Add all the cleaned dataframes (shots per game) for a year to the dictionary\n",
+    "        all_games_dictionary[year] = [convert_event_to_dataframe(game) for game in yearly_data]\n",
+    "    \n",
+    "    return all_games_dictionary"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "id": "966a4347",
    "metadata": {},
-   "cell_type": "code",
    "source": [
-    "#Test on all regular season\n",
-    "\n",
-    "data_rs_clean = {}  # Store all clean data\n",
-    "\n",
-    "#Loop on all years in regular season\n",
-    "for year in data_rs:\n",
-    "    current_year = data_rs[year]  #Get year\n",
-    "    sdata_year = len(current_year)  #Get the number of games in the year\n",
-    "    data_rs_clean[year] = []  #Create year key to store all games\n",
-    "\n",
-    "    #Loop on all game in the year\n",
-    "    for game in range(sdata_year):\n",
-    "        current_year[game] = convert_event_to_dataframe(game_nhl=current_year[game])  #Processing game data\n",
-    "        data_rs_clean[year].append(current_year[game])  #Append the clean game data to the year key\n",
-    "\n",
-    "display(data_rs_clean[2022][0])  #Display the first game of 2022"
+    "Cette ligne de code est un exemple d'utilisation de la fonction get_data_from()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "42b484a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data imported: 1312\n",
+      "Data imported: 88\n",
+      "Data imported: 1312\n",
+      "Data imported: 88\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idGame</th>\n",
+       "      <th>periodType</th>\n",
+       "      <th>currentPeriod</th>\n",
+       "      <th>timeInPeriod</th>\n",
+       "      <th>situationCode</th>\n",
+       "      <th>eventOwnerTeam</th>\n",
+       "      <th>typeDescKey</th>\n",
+       "      <th>iceCoord</th>\n",
+       "      <th>shootingPlayer</th>\n",
+       "      <th>goaliePlayer</th>\n",
+       "      <th>shotType</th>\n",
+       "      <th>teamSide</th>\n",
+       "      <th>emptyGoalNet</th>\n",
+       "      <th>isGoalAdvantage</th>\n",
+       "      <th>shotDistance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022020124</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-28 23:02:45+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Islanders</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(34, 31)</td>\n",
+       "      <td>Sebastian Aho</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>slap</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>63.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022020124</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-28 23:03:42+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Islanders</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(78, -16)</td>\n",
+       "      <td>Jean-Gabriel Pageau</td>\n",
+       "      <td>Frederik Andersen</td>\n",
+       "      <td>deflected</td>\n",
+       "      <td>away</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>19.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022020124</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-28 23:04:53+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Hurricanes</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(-45, 34)</td>\n",
+       "      <td>Brett Pesce</td>\n",
+       "      <td>Ilya Sorokin</td>\n",
+       "      <td>slap</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>55.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022020124</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-28 23:04:57+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Hurricanes</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(-74, 7)</td>\n",
+       "      <td>Jesper Fast</td>\n",
+       "      <td>Ilya Sorokin</td>\n",
+       "      <td>wrist</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>16.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022020124</td>\n",
+       "      <td>REG</td>\n",
+       "      <td>1/3</td>\n",
+       "      <td>2022-10-28 23:07:30+00:00</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>Hurricanes</td>\n",
+       "      <td>shot-on-goal</td>\n",
+       "      <td>(-13, -30)</td>\n",
+       "      <td>Andrei Svechnikov</td>\n",
+       "      <td>Ilya Sorokin</td>\n",
+       "      <td>wrist</td>\n",
+       "      <td>home</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Neutral</td>\n",
+       "      <td>81.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       idGame periodType currentPeriod              timeInPeriod  \\\n",
+       "0  2022020124        REG           1/3 2022-10-28 23:02:45+00:00   \n",
+       "1  2022020124        REG           1/3 2022-10-28 23:03:42+00:00   \n",
+       "2  2022020124        REG           1/3 2022-10-28 23:04:53+00:00   \n",
+       "3  2022020124        REG           1/3 2022-10-28 23:04:57+00:00   \n",
+       "4  2022020124        REG           1/3 2022-10-28 23:07:30+00:00   \n",
+       "\n",
+       "  situationCode eventOwnerTeam   typeDescKey    iceCoord       shootingPlayer  \\\n",
+       "0          1551      Islanders  shot-on-goal    (34, 31)        Sebastian Aho   \n",
+       "1          1551      Islanders  shot-on-goal   (78, -16)  Jean-Gabriel Pageau   \n",
+       "2          1551     Hurricanes  shot-on-goal   (-45, 34)          Brett Pesce   \n",
+       "3          1551     Hurricanes  shot-on-goal    (-74, 7)          Jesper Fast   \n",
+       "4          1551     Hurricanes  shot-on-goal  (-13, -30)    Andrei Svechnikov   \n",
+       "\n",
+       "        goaliePlayer   shotType teamSide  emptyGoalNet isGoalAdvantage  \\\n",
+       "0  Frederik Andersen       slap     away         False         Neutral   \n",
+       "1  Frederik Andersen  deflected     away         False         Neutral   \n",
+       "2       Ilya Sorokin       slap     home         False         Neutral   \n",
+       "3       Ilya Sorokin      wrist     home         False         Neutral   \n",
+       "4       Ilya Sorokin      wrist     home         False         Neutral   \n",
+       "\n",
+       "   shotDistance  \n",
+       "0          63.1  \n",
+       "1          19.4  \n",
+       "2          55.6  \n",
+       "3          16.6  \n",
+       "4          81.7  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
    ],
-   "id": "a8a3a571e955b216",
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "# This gets all the cleaned data from 2022 to 2023 (inclusive) in a dictionary (key: year)\n",
+    "data_2017_2023 = get_data_from(2022,2023)\n",
+    "data_2017_2023[2022][123].head() # Année 2022, 124eme partie, 5 premières ligne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebca9b32",
+   "metadata": {},
+   "source": [
+    "## 5. Visualisation avancée"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
